force-app/main/default/objects/Account/fields/Country_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Registration__c</fullName>
    <description>Country of Registration</description>
    <label>Country of Registration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>