force-app/main/default/objects/Account/fields/Current_valuation__c.field-meta.xml
<CustomField>
    <fullName>Current_valuation__c</fullName>
    <description>Current valuation of Account</description>
    <label>Current valuation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>