force-app/main/default/objects/Account/fields/Raised_Funding_already__c.field-meta.xml
<CustomField>
    <fullName>Raised_Funding_already__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is a checkbox field for investor about fund raised already or not.</description>
    <label>Raised Funding already</label>
    <type>Checkbox</type>
</CustomField>