force-app/main/default/objects/Account/fields/Total_stake__c.field-meta.xml
<CustomField>
    <fullName>Total_stake__c</fullName>
    <description>Aggregate ownership percentage or equity interest held by a specific limited partner in the fund.</description>
    <label>Total stake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>