force-app/main/default/objects/Account/recordTypes/VC.recordType-meta.xml
<RecordType>
    <fullName>VC</fullName>
    <active>true</active>
    <label>VC</label>
</RecordType>